[gd_scene load_steps=4 format=3 uid="uid://c2gd3x3rxjmg6"]

[ext_resource type="Script" uid="uid://8opmih0hqjxq" path="res://Scripts/Enemies/vision_area.gd" id="1_41ojb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_large"]
radius = 250.0

[sub_resource type="CircleShape2D" id="CircleShape2D_small"]
radius = 30.0

[node name="VisionArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_41ojb")

[node name="PerceptionRange" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_large")
debug_color = Color(0.431373, 0.831373, 0.960784, 0.156863)

[node name="AbsoluteRange" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_small")
debug_color = Color(0.960784, 0.254902, 0.254902, 0.301961)

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(0, 0)
